[package]
name = "mcpi"
version = "0.1.0"
edition = "2021"
authors = ["doinkythederp <doinkythederp@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
bytes = "1.6.0"
futures-core = "0.3.30"
nalgebra = "0.32.5"
serde_json = "1.0.117"
snafu = "0.8.2"
tokio = { version = "1.37.0", features = ["net", "sync", "io-util", "macros"] }

[dev-dependencies]
chrono = "0.4.38"
futures-util = "0.3.30"
line_drawing = "1.0.0"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
